// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`embed-layout.ts: Layout align left selector for embed Card 1`] = `
Object {
  "content": Array [
    Object {
      "type": "paragraph",
    },
    Object {
      "attrs": Object {
        "layout": "align-start",
        "originalHeight": 282,
        "originalWidth": null,
        "url": "https://embedCardTestUrl",
        "width": 66.66666666666666,
      },
      "type": "embedCard",
    },
    Object {
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`embed-layout.ts: Layout align right selector for embed Card 1`] = `
Object {
  "content": Array [
    Object {
      "type": "paragraph",
    },
    Object {
      "attrs": Object {
        "layout": "align-end",
        "originalHeight": 282,
        "originalWidth": null,
        "url": "https://embedCardTestUrl",
        "width": 66.66666666666666,
      },
      "type": "embedCard",
    },
    Object {
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`embed-layout.ts: Layout wrap left selector for embed Card 1`] = `
Object {
  "content": Array [
    Object {
      "type": "paragraph",
    },
    Object {
      "attrs": Object {
        "layout": "wrap-left",
        "originalHeight": 282,
        "originalWidth": null,
        "url": "https://embedCardTestUrl",
        "width": 66.66666666666666,
      },
      "type": "embedCard",
    },
    Object {
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`embed-layout.ts: Layout wrap right selector for embed Card 1`] = `
Object {
  "content": Array [
    Object {
      "type": "paragraph",
    },
    Object {
      "attrs": Object {
        "layout": "wrap-right",
        "originalHeight": 282,
        "originalWidth": null,
        "url": "https://embedCardTestUrl",
        "width": 66.66666666666666,
      },
      "type": "embedCard",
    },
    Object {
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;
